<resources>
    <string name="app_name">BeBetter</string>
    <string name="menu_mygoal">ЦЕЛИ</string>
    <string name="menu_myrecords">РЕКОРДЫ</string>
    <string name="menu_myoptions">ОПЦИИ</string>
    <string name="circle_add_goal">ADD GOAL</string>
    <string name="save_goal">СОХРАНИТЬ ЦЕЛЬ</string>
    <string name="description_theme_sport">Данная тема поможет достичь желаемого результата в сфере спорт и предоставит на выбор 3 категории. Вперёд к новым победам!</string>
    <string name="description_theme_science">Данная тема поможет достичь желаемого результата в сфере изучения и предоставит на выбор 2 категории. Будь мудрее с каждым днём!</string>
    <string name="description_theme_other">Данная тема поможет достичь желаемых результатов в абсолютно разных сферах и предоставит на выюор 2 категории.</string>
    <string name="description_theme_mygoal">Данная категория позволит создать собственную цель, если это касается чего-то особенного.</string>
    <string name="chosen">ВЫБРАТЬ</string>
    <string name="description_category_weight">Данная категория поможет набрать массу или избавиться от лишнего веса. Самое время для мощных тренировок!</string>
    <string name="description_category_run">Данная категория поможет добиться желаемого результата в скорости и выносливости, например: в беге,
        езды на велосипеде и т.д.</string>
    <string name="description_category_skills">Данная категория поможет улучшить твои навыки в практически любом деле до определенного уровня, например: выход на турнике, шпагат, танец, рисование и т.д.</string>
    <string name="description_category_repeats">Данная категория поможет поставить новый рекорд в упражнении, например: отжимания, приседания и т.д., а
        также создать еще более мощное тело!</string>
    <string name="description_category_book">Если ты хотел прочитать книгу, то эта категория не даст тебе забросить эту цель
        и ты прочитаешь книгу до конца. Становись еще сообразительней!</string>
    <string name="description_category_language">Данная категория поможет улучшить знания любого иностранного языка до определенного уровня который ты хочешь выучить. Вперёд за знаниями!</string>
    <string name="quote">Я во всем ищу вдохновение для себя… Если кто-либо преследует свою мечту, то это вдохновляет меня.</string>
    <string name="quote_author">Конор МакГрегор</string>
    <string name="theme_of_sport">ТЕМА СПОРТ</string>
    <string name="category_weight">КАТЕГОРИЯ МАССА</string>
    <string name="maximum_weight">МАКСИМАЛЬНЫЙ ВЕС:</string>
    <string name="min_kg">кг</string>
    <string name="minimum_weight">МИНИМАЛЬНЫЙ ВЕС:</string>
    <string name="max_kg">кг</string>
    <string name="category_cardio">КАТЕГОРИЯ КАРДИО</string>
    <string name="far_distance">ДАЛЬНЯЯ ДИСТАНЦИЯ:</string>
    <string name="far_distance_km">км</string>
    <string name="best_speed">ЛУЧШАЯ СКОРОСТЬ:</string>
    <string name="best_speed_sec">сек</string>
    <string name="cetegory_skills">КАТЕГОРИЯ НАВЫКИ</string>
    <string name="learn_fast">БЫСТРОЕ ИЗУЧЕНИЕ:</string>
    <string name="yield_on_two_hands">Выход на две руки</string>
    <string name="duration">ДЛИТЕЛЬНОСТЬ:</string>
    <string name="duration_days">дней</string>
    <string name="category_repetition">КАТЕГОРИЯ ПОВТОРЕНИЯ</string>
    <string name="maximum_number_repetitions">МАКС. КОЛ-ВО ПОВТОРЕНИЙ:</string>
    <string name="maximum_number_repetitions_times">раз</string>
    <string name="exercise">УПРАЖНЕНИЕ:</string>
    <string name="Pushups" translatable="false">Отжимания</string>
    <string name="theme_science">ТЕМА НАУКА</string>
    <string name="category_books">КАТЕГОРИЯ КНИГА</string>
    <string name="quick_read">ОБЩЕЕ КОЛИЧЕСТВО КНИГ:</string>
    <string name="X_rule">Правило 10Х</string>
    <string name="SUM_READ_PAPERS">СУММА ПРОЧИТАНЫХ СТРАНИЦ.:</string>
    <string name="pages100">100 страниц</string>
    <string name="category_language">КАТЕГОРИЯ ЯЗЫКИ</string>
    <string name="sum_hours">СУМА ЧАСОВ ИЗУЧЕНИЯ:</string>
    <string name="maximum_number_hours_day">МАКСИМАЛЬНОЕ КОЛ-ВО ЧАСОВ ЗА ДЕНЬ:</string>
    <string name="lang_units">часов</string>
    <string name="words_per_day">МАКС. КОЛ-ВО СЛОВ ЗА ДЕНЬ:</string>
    <string name="words_per_day_words">слов</string>
    <string name="sum_learned_words">СУММА ИЗУЧЕННЫХ СЛОВ:</string>
    <string name="sum_learned_words_100_word">100 слов</string>
    <string name="reminder_interval">ИНТЕРВАЛ НАПОМИНАНИЯ:</string>
    <string name="reminder_interval_hour">час</string>
    <string name="sound_on_off">ВКЛ/ВЫКЛ ЗВУК:</string>
    <string name="vibration_on_off">ВКЛ/ВЫКЛ ВИБРАЦИЮ:</string>
    <string name="days_tracking">ДНИ СЛЕЖЕНИЯ:</string>
    <string name="options_sunday">В</string>
    <string name="options_monday">П</string>
    <string name="options_tuesday">В</string>
    <string name="options_wednesday">С</string>
    <string name="options_thursday">Ч</string>
    <string name="options_friday">П</string>
    <string name="options_saturday">С</string>
    <string name="notifications_on_off">ВКЛ/ВЫКЛ УВЕДОМЛЕНИЯ:</string>
    <string name="statistics">СТАТИСТИКА</string>
    <string name="statistics_description_of_purpose">Я ХОЧУ БЫТЬ ЛУЧШИМ В МИРЕ ПО СКОРОСТИ БЕГА</string>
    <string name="statistics_current_result">ТЕКУЩИЙ РЕЗУЛЬТАТ:</string>
    <string name="statistics_your_aim">ВАША ЦЕЛЬ:</string>
    <string name="statistics_remaining_purpose">ОСТАЛОСЬ ДО ЦЕЛИ:</string>
    <string name="statistics_day_task">ЗАДАЧА В ДЕНЬ:</string>
    <string name="statistics_status">СТАТУС:</string>
    <string name="statistics_days_left">ОСТАЛОСЬ ДНЕЙ:</string>
    <string name="statistics_done">ОСТАЛОСЬ ДНЕЙ:</string>
    <string name="select_themes">ВЫБЕРИТЕ ТЕМУ</string>
    <string name="sport">СПОРТ</string>
    <string name="science">НАУКА</string>
    <string name="other">ДРУГОЕ</string>
    <string name="weight_sport">МАССА</string>
    <string name="cardio_sport">КАРДИО</string>
    <string name="repetitions_sport">ПОВТОРЕНИЯ</string>
    <string name="weight_description_purpose">ОПИСАНИЕ ЦЕЛИ:</string>
    <string name="weight_current_weight">ТЕКУЩИЙ ВЕС:</string>
    <string name="weight_current_weight_kg">КГ</string>
    <string name="weight_your_aim">ЖЕЛАЕМЫЙ ВЕС:</string>
    <string name="weight_your_aim_kg">КГ</string>
    <string name="weight_goal_date">ДАТА ЦЕЛИ:</string>
    <string name="weight_goal_date_from">ОТ</string>
    <string name="weight_goal_date_before">ДО</string>
    <string name="cardio_description_purpose">ОПИСАНИЕ ЦЕЛИ:</string>
    <string name="cardio_distance">ДИСТАНЦИЯ:</string>
    <string name="cardio_current_time">ТЕКУЩЕЕ ВРЕМЯ:</string>
    <string name="cardio_current_time_ok">ОК</string>
    <string name="cardio_goal_date">ДАТА ЦЕЛИ:</string>
    <string name="cardio_goal_date_from">ОТ</string>
    <string name="cardio_goal_date_before">ДО</string>
    <string name="repetitions_description_exercise">ОПИСАНИЕ УПРАЖНЕНИЯ:</string>
    <string name="repetitions_number_repetitions">КОЛ-ВО ПОВТОРЕНИЙ СЕЙЧАС:</string>
    <string name="repetitions_desired_result">ЖЕЛАЕМЫЙ РЕЗУЛЬТАТ:</string>
    <string name="repetitions_goal_date">ДАТА ЦЕЛИ:</string>
    <string name="repetitions_goal_date_from">ОТ</string>
    <string name="repetitions_goal_date_before">ДО</string>
    <string name="book_description_purpose">ОПИСАНИЕ ЦЕЛИ:</string>
    <string name="book_number_page_read">КОЛ-ВО СТРАНИЦ ДЛЯ ПРОЧТЕНИЯ:</string>
    <string name="book_this_book">ДАННЫЕ КНИГИ:</string>
    <string name="book_untitled">БЕЗ НАЗВАНИЯ:</string>
    <string name="book_change">ИЗМЕНИТЬ</string>
    <string name="book_goal_date">ДАТА ЦЕЛИ:</string>
    <string name="book_goal_date_from">ОТ</string>
    <string name="book_goal_date_before">ДО</string>
    <string name="language_name_language">НАЗВАНИЕ ЯЗЫКА:</string>
    <string name="language_level_language">ТЕКУЩИЙ УРОВЕНЬ ЯЗЫКА:</string>
    <string name="language_desired_result">ЖЕЛАЕМЫЙ РЕЗУЛЬТАТ:</string>
    <string name="language_goal_date" translatable="false">ДАТА ЦЕЛИ:</string>
    <string name="language_goal_date_from">ОТ</string>
    <string name="language_goal_date_before">ДО</string>
    <string name="skills_description_skills">ОПИСАНИЕ НАВЫКА:</string>
    <string name="skills_choose_level">ВЫБЕРИ УРОВЕНЬ:</string>
    <string name="skills_your_level" translatable="false">МОЙ УРОВЕНЬ:</string>
    <string name="skills_your_max_level" translatable="false">МАКС. УРОВЕНЬ:</string>
    <string name="skills_goal_date">ДАТА ЦЕЛИ:</string>
    <string name="skills_goal_date_from" translatable="false">ОТ</string>
    <string name="skills_goal_date_before">ДО</string>
    <string name="descr_new_record_cardio">Выбрав это мы поможем тебе поставить новый рекорд твоей цели. Тебе нужно будет записать: дистанцию, текущею скорость и твою цель в секундах. Вперед!</string>
    <string name="descr_regular_attack_cardio">Выбрав это мы поможем добиться твоей регулярности, для этого запиши дистанцию которую хочешь преодолевать каждый день и вперёд!</string>
    <string name="descr_new_record">Выбрав это мы поможем добиться нового рекорда в твоих упражнениях на повторения, для этого введи текущее кол-во повторений и свой конечный результат!</string>
    <string name="descr_regular_attack">Выбрав это мы поможем тебе добиться регулярности выполнения упражнения каждый день. Для этого просто запиши свою цель в повторениях за один день!</string>
    <string name="warning">Ваше время истекло.\nПостарайтесь лучше!</string>
    <string-array name="frequency">
        <item>Each hour</item>
        <item>Each 2 hours</item>
        <item>Each 3 hours</item>
        <item>Each 4 hours</item>
    </string-array>
    <string-array name="frequencyValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="daysValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="selectedDays">

    </string-array>
    <string name="descr_weight">Если твоя ближайшая цель это набрать массы или скинуть лишний вес, то эта категория для тебя! Помни, что самое главное это наращивать мышцы! Поэтому у тебя должна быть конкретная программа тренировок и не забывай о здоровом питании!</string>
    <string name="instruct_weight">Запиши своё название цели и мотивирующие слова которые помогут тебе дойти до конца, свой текущий вес и желаемый вес. В зависимости от того, что введёшь программа поймет, что конкретно ты хочешь сделать(похудеть или набрать). Затем запиши дату своей цели и вперёд! Каждый день тебе будут приходить уведомления о том, что тебе нужно потренироваться а спустя каждую неделю взвеситься и записать свой прогресс. Удачи!</string>
    <string name="child_section_start_kg">кг</string>
    <string name="statistics_remaining_purpose_kg">кг</string>
    <string name="statistics_task_day">ЗАДАЧА В ДЕНЬ:</string>
    <string name="statistics_task_day_kg">кг</string>
    <string name="statistics_days_left_day">10</string>
    <string name="remove_your_purpose">ВЫ ХОТИТЕ УДАЛИТЬ ВАШУ ЦЕЛЬ</string>
    <string name="remove_your_purpose_Yes">ДА</string>
    <string name="remove_your_purpose_not">НЕТ</string>
    <string name="description_goal_goal_name_keyword">Название цели или ключевое слово</string>
    <string name="description_goal_write_for_what">Напишите ради чего вы это делаете</string>
    <string name="description_goal_done">ГОТОВО</string>
</resources>