<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameGoal"
        android:hint="@string/description_goal_goal_name_keyword"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionGoal"
        android:hint="@string/description_goal_write_for_what"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_goal_done"
        android:onClick="saveDescription"
        android:background="@color/clr_main"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

</LinearLayout>