<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:background="@color/colorGrey">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clr_sport"
        android:id="@+id/confirmDelete"
        android:textColor="@color/colorBackground"
        android:text="@string/remove_your_purpose"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/clr_sport"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorBackground"
        android:id="@+id/delete"
        android:text="@string/remove_your_purpose_Yes"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/clr_sport"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorBackground"
        android:id="@+id/back"
        android:text="@string/remove_your_purpose_not"
        />
    </RelativeLayout>
</LinearLayout>