<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/statistics"
            android:textColor="@color/colorRed"
            android:textSize="22sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <TextView
            android:id="@+id/goalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_description_of_purpose"
            android:textColor="@color/clr_sport"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <RelativeLayout
        android:id="@+id/bookPresent"
        android:padding="15sp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/dataBook"
            android:textColor="@color/colorBlack"
            android:layout_centerHorizontal="true"
            android:text="Нужно читать много, а не многих авторов."/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/separator1"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:id="@+id/runDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="15sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/distanceRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="ДИСТАНЦИЯ:"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/distanceRunUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10sp"
            android:text="1 км"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/separator2"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:id="@+id/llCurrentResult"
        android:padding="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/currentResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/statistics_current_result"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentResultUnits"
            android:text="@string/child_section_start_kg"
            android:layout_marginLeft="15sp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/separator7"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/yourGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/statistics_your_aim"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/yourGoalUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="90кг"
            android:layout_marginLeft="15sp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:id="@+id/llLeftToGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/leftToGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/statistics_remaining_purpose"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/leftToGoalUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/statistics_remaining_purpose_kg"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/separator8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_task_day"
            android:id="@+id/taskOfDay"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/taskOfDayUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/statistics_task_day_kg"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/separator3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:orientation="horizontal"
        android:background="@color/colorGrey"></LinearLayout>

    <LinearLayout
        android:id="@+id/llTaskWeek"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ЗАДАЧА НА НЕДЕЛЮ:"
            android:id="@+id/taskOfWeek"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/taskOfWeekUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15sp"
            android:text="1кг"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:id="@+id/infoStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/statusGoalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/statistics_status"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/statusGoal"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:layout_marginLeft="15sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/leftDaysGoalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/statistics_days_left"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:id="@+id/leftDaysGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_days_left_day"
            android:textSize="18sp"
            android:layout_marginLeft="15sp"
            android:textColor="@color/colorBlack"
            android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/fromGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ОТ: 27.08.2017"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/toGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ДО: 20.09.2017"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30sp"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"></LinearLayout>
</LinearLayout>