<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llMenu">

        <RelativeLayout
            android:background="@color/colorOrange"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="50sp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlGoalBtn"
                android:onClick="showMyGoalsMethod">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_mygoal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3sp"
                    android:id="@+id/llSlide"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorGreen"
                    android:orientation="horizontal"></LinearLayout>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/colorOrange"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="50sp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlRecordsBtn"
                android:onClick="openRecords">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_myrecords"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3sp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorOrange">
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/colorOrange"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="50sp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlOptionsBtn"
                android:onClick="openOptions">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_myoptions"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3sp"
                    android:background="@color/colorOrange"
                    android:layout_alignParentBottom="true">
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/allGoalsList"
        android:layout_below="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:groupIndicator="@color/colorPrimary"
        android:transcriptMode="alwaysScroll" />

    <Button
        android:id="@+id/startAddGoal"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:onClick="openGoalChooser"
        android:layout_margin="20sp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_green"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="Add Goal" />
</RelativeLayout>